--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "joi": "^17.6.0",
     "joi-translation-pt-br": "^0.0.6",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "pg": "^8.7.3"
   }
 }
