--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "joi": "^17.6.0",
     "joi-translation-pt-br": "^0.0.6",
     "nodemon": "^2.0.15",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "uuid": "^8.3.2"
   }
 }
